fix overflow issue

--- a/src/style.css
+++ b/src/style.css
@@ -96,7 +96,8 @@ body {
   margin-right    : var(--default-padding);
   border-radius   : var(--corner-radius);
   
-  overflow-y      : auto;
+  overflow-y      : hidden;
+  overflow-x      : hidden;
   line-height     : 1.5;
   z-index         : 0;
 }
@@ -133,11 +134,7 @@ body {
   padding       : 10px;
   margin        : 5px;
   
-  font-size       : 16px;
-  line-height     : 1.5; 
   text-align      : center;
-  text-decoration : none;
-  vertical-align  : text-bottom;
   cursor          : pointer;
   
   overflow: hidden;
@@ -206,6 +203,7 @@ body {
   cursor          : pointer;
 
   transition  : var(--transition);
+  overflow-x  : hidden;
 }
 
 .projects:hover {
@@ -216,7 +214,7 @@ body {
   background  : var(--color-background);
   color       : var(--color-foreground);
   
-  width       : 400px;
+  max-width   : 400px;
   
   margin      : var(--default-margin);
   margin-left : auto;
@@ -224,6 +222,8 @@ body {
   
   padding-top   : 5px;
   padding-bottom: 5px;
+  padding-left  : 10px;
+  padding-right : 10px;
   border-radius : 20px;
 }
 
@@ -304,5 +304,28 @@ body {
   .name {
     text-align: center;
   }
+  
+  .subjects {
+    width    : 170px;
+    height   : 170px;
+  }
+  
+  .subjects_icon {
+    width    : 80px;
+    height   : 80px;
+  }
 }
 
+@media screen and (max-width : 405px) {
+  .subjects {
+    font-size       : 14px;
+  
+    width    : 140px;
+    height   : 140px;
+  }
+  
+  .subjects_icon {
+    width    : 50px;
+    height   : 50px;
+  }
+}
